prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor
  name: monitor-svc
  namespace: monitoring
spec:
  ports:
  - port: 9090
    protocol: TCP
    name: prometheus
    targetPort: 9090
  - port: 3000
    protocol: TCP
    name: grafana
    targetPort: 3000
  selector:
    app: monitor
  type: NodePort
